hello-world/namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: app-1
  labels:
    name: app-1
