hello-world/deployment.yml
# Deployment
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-hello-world
  namespace: app-1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: test-hello-world
  template:
    metadata:
      labels:
        app: test-hello-world
    spec:
      containers:
        - name: test-hello-world
          image: meezaan/headers.meezaan.net:latest 
          ports:
            - containerPort: 8080
              protocol: TCP
