hello-world/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helloworld-ingress
  namespace: app-1
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: kong
    cert-manager.io/cluster-issuer: letsencrypt-prod
    konghq.com/plugins: jwt-cluster
    #konghq.com/plugins: request-transformer-ingress
spec:
  tls:
  - hosts:
    - "hello-world.8.7x.ax"
#    - "hello2-world.8.7x.ax"
    secretName: "hello-world-tls"
  rules:
  - host: hello-world.8.7x.ax
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-world
            port:
              number: 80
#  - host: hello2-world.8.7x.ax
#    http:
#      paths:
#      - path: /
#        pathType: Prefix
#        backend:
#          service:
#            name: hello-world2
#            port:
#              number: 80
